@@ -1,6 +1,6 @@
 .\"
 .\" avrdude - A Downloader/Uploader for AVR device programmers
-.\" Copyright (C) 2001, 2002, 2003, 2005 - 2011  Joerg Wunsch
+.\" Copyright (C) 2001, 2002, 2003, 2005 - 2013  Joerg Wunsch
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
 .\"
 .\" $Id$
 .\"
-.Dd DATE December 3, 2012
+.Dd DATE May 16, 2013
 .Os
 .Dt AVRDUDE 1
 .Sh NAME
@@ -38,6 +38,7 @@
 .Oc
 .Op Fl F
 .Op Fl i Ar delay
+.Op Fl n logfile
 .Op Fl n
 .Op Fl O
 .Op Fl P Ar port
@@ -416,6 +417,16 @@ is running.
 On Win32 operating systems, a preconfigured number of cycles per
 microsecond is assumed that might be off a bit for very fast or very
 slow machines.
+.It Fl l Ar logfile
+Use
+.Ar logfile
+rather than
+.Va stderr
+for diagnostics output.
+Note that initial diagnostic messages (during option parsing) are still
+written to
+.Va stderr
+anyway.
 .It Fl n
 No-write - disables actually writing data to the MCU (useful for debugging
 .Nm avrdude
